resolve footer overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,11 @@ body {
 html {
   scroll-behavior: smooth; 
 }
+
+body, html {
+  overflow-x: hidden;
+  width: 100%;
+}
 /* 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
